--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="ChangeItem.cpp" />
     <ClCompile Include="CSVReader.cpp" />
+    <ClCompile Include="GameOverScene.cpp" />
     <ClCompile Include="interact_collider.cpp" />
     <ClCompile Include="MapGenerator.cpp" />
     <ClCompile Include="EnemyTestScene.cpp" />
@@ -164,6 +165,7 @@
     <ClCompile Include="Poltergeist.cpp" />
     <ClCompile Include="PoltergeistBullet.cpp" />
     <ClCompile Include="PsycokinesisBullet.cpp" />
+    <ClCompile Include="ResultScene.cpp" />
     <ClCompile Include="RushGhost.cpp" />
     <ClCompile Include="CarGhost.cpp" />
     <ClCompile Include="Field.cpp" />
@@ -189,6 +191,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ChangeItem.h" />
     <ClInclude Include="CSVReader.h" />
+    <ClInclude Include="GameOverScene.h" />
     <ClInclude Include="interact_collider.h" />
     <ClInclude Include="interact_prop.h" />
     <ClInclude Include="Line.h" />
@@ -205,6 +208,7 @@
     <ClInclude Include="PsycokinesisBullet.h" />
     <ClInclude Include="Ray.h" />
     <ClInclude Include="resource_loader.h" />
+    <ClInclude Include="ResultScene.h" />
     <ClInclude Include="RushGhost.h" />
     <ClInclude Include="CarGhost.h" />
     <ClInclude Include="Field.h" />
